--- a/ocr-cezam/package.json
+++ b/ocr-cezam/package.json
@@ -15,7 +15,8 @@
     "nodemon": "^2.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.2",
+    "react-scripts": "^2.0.5",
+    "url-join": "^4.0.1",
     "web-vitals": "^1.1.0",
     "xlsx": "^0.16.9"
   },
